[package]
name = "my-letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes"] }
env_logger = "0.10.0"
samotop = { version = "0.13.2", default-features = false, features = ["parser-peg"] }
